Disable native date picker indicator and replace with svg icon, and fix checklist alignment

--- a/src/style.css
+++ b/src/style.css
@@ -411,8 +411,7 @@ textarea.task-description {
 
 input[type="checkbox"] {
     display: block;
-    align-self: flex-start;
-    margin-top: 3px;
+    align-self: center;
     width: 15px;
     height: 15px;
     padding: 3px;
@@ -439,7 +438,7 @@ ul {
 li { 
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     width: calc(100% - 3px);
     font-size: var(--fs-checklist);
     margin-left: 3px;
@@ -455,12 +454,13 @@ li > label {
 }
 
 .checklist-input { 
+    position: relative;
+    bottom: 1px;
     max-width: calc(100% - 17px);
     white-space: pre-wrap;
     overflow-wrap: break-word;
     field-sizing: content;
     min-height: auto;
-    align-self: center;
 }
 
 .checklist-input,
@@ -502,7 +502,7 @@ button.add-btn {
 .custom-date {
     position: relative;
     color: transparent;
-    width: 110px;
+    width: 120px;
     field-sizing: content;
     margin: 0;
     padding: 0;
@@ -510,14 +510,32 @@ button.add-btn {
 }
 
 .due-date {
-    display: flex;
+    position: relative;
+    display: inline-block;
     max-height: 29px;
+}
+
+.due-date::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 49%;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    pointer-events: none;
+    z-index: 1;
+
+    background-image: url("./images/calendar-svgrepo-com.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .custom-date::before {
     position: absolute;
     display: inline-block;
-    bottom: 0px;
+    left: 27px;
+    bottom: 2px;
     padding: 2px;
     width: 90px;
     content: attr(data-date);
@@ -540,11 +558,13 @@ button.add-btn {
 
 .custom-date::-webkit-calendar-picker-indicator {
     position: absolute;
-    right: -10px;
+    left: 0;
     bottom: 2px;
+    opacity: 0;
     cursor: pointer;
     background-color: var(--clr-white);
     width: 25px;
+    z-index: 2;
 }
 
 select:focus:not(:focus-visible),
